# semantic_suma

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  package.xml
assets/: KIT_passat.mtl  KIT_tire.mtl  KIT_velodyne.mtl
config/: default.xml
src/core/: Frame.h  Frame2Model.cpp  Frame2Model.h  ImagePyramidGenerator.cpp  ImagePyramidGenerator.h  LieGaussNewton.cpp  LieGaussNewton.h  Objective.h  Posegraph.cpp  Posegraph.h  Preprocessing.cpp  Preprocessing.h  Surfel.h  SurfelMap.cpp  SurfelMap.h  SurfelMapping.cpp  SurfelMapping.h  lie_algebra.cpp  lie_algebra.h
src/io/: KITTIReader.cpp  KITTIReader.h  LaserscanReader.h  RangenetAPI.cpp  RangenetAPI.hpp  RobocarReader.cpp  RobocarReader.h  SimulationReader.cpp  SimulationReader.h
src/opengl/: MatrixStack.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ObjReader.cpp  ObjReader.h
src/rv/: CompositeParameter.cpp  CompositeParameter.h  Exception.h  FileUtil.cpp  FileUtil.h  IOError.h  Laserscan.cpp  Laserscan.h  LaserscanReader.h  Math.cpp  Math.h  Parameter.cpp  Parameter.h  ParameterList.cpp  ParameterList.h  ParameterListIterator.cpp  ParameterListIterator.h  PrimitiveParameters.cpp  PrimitiveParameters.h  Random.cpp  Random.h  RangeParameter.cpp  RangeParameter.h  RingBuffer.h  Stopwatch.cpp  Stopwatch.h  XmlDocument.cpp  XmlDocument.h  XmlError.h  XmlNode.cpp  XmlNode.h  geometry.h  point_traits.h  string_utils.cpp  string_utils.h  transform.cpp  transform.h
src/shader/: Frame2Model_jacobians.frag  Frame2Model_jacobians.geom  Frame2Model_jacobians.vert  avg_vertexmap.frag  bilateral_filter.frag  color.glsl  (+54 more)
(+14 files in other folders)
